<resources>
    <string name="app_name" translatable="false">MyHomeBookkeeping</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="title_home">Journal</string>
    <string name="reports_title">Reports</string>
    <string name="title_categories">Categories</string>

    <string name="header_cash_accounts">account</string>
    <string name="select_text_button">select</string>
    <string name="cancel_text_button">cancel</string>

    <string name="new_cash_account">new cash account</string>
    <string name="new_money_movement">new money movement</string>

    <string name="account_name">cash account name</string>
    <string name="last_4_digits_of_card">last 4 digits of the card</string>
    <string name="only_last_4_digits">only last 4 digits</string>

    <string name="add_button_text">add</string>

    <string name="currency">currency</string>

    <string name="enterName">enter name</string>

    <string name="title_cash_account">accounts</string>
    <string name="title_currencies">currencies</string>
    <string name="title_add_income_or_expense">add income or expense </string>

    <string name="too_short_name_message_text">too short name</string>
    <string name="select_category_message_text">select a category</string>

    <string name="youDescriptionText">you description</string>
    <string name="date_time_text">date/time</string>

    <string name="selectedCashAccount">select cash account</string>
    <string name="selectedCurrency">select currency</string>
    <string name="selectedCategory">select category</string>

    <string name="descriptionTextDescription">description</string>

    <string name="apply_button_text">apply</string>
    <string name="reset">reset</string>
    <string name="all_text">all</string>
    <string name="selectAll">select all</string>
    <string name="allIncome">all income</string>
    <string name="allSpending">all spending</string>
    <string name="incomeCategoryTextOnButton">income</string>
    <string name="spendingCategoryTextOnButton">spending</string>
    <string name="title_settings">settings</string>
    <string name="security">security</string>
    <string name="change_button_text">change</string>

    <string name="add_new_category_button_text">add new category</string>
    <string name="add_new_currency_button_text">add new currency</string>
    <string name="add_new_cash_account_button_text">add new cash account</string>
    <string name="save_and_select_button_text">save and select</string>
    <string name="save_button_text">save</string>

    <string name="income_category_text_radio_button">income</string>
    <string name="spending_category_text_radio_button">spending</string>

    <string name="amount_text">amount</string>

    <string name="cash_account_text">cash account</string>
    <string name="currency_text">currency</string>
    <string name="category_text">category</string>

    <string name="help_fragment">help</string>
    <string name="submit_text_button">submit</string>

</resources>
