<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/category_name"
        style="@style/DialogEnterNewName"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/category_name">

        <RadioButton
            android:id="@+id/incoming_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income_category_text_radio_button" />

        <RadioButton
            android:id="@+id/spending_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spending_category_text_radio_button" />
    </RadioGroup>

    <Button
        style="@style/DialogButtonLeft.Add"
        android:id="@+id/addNewCategoryButton"
        android:text="@string/add_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <Button
        style="@style/DialogButtonRight.Cancel"
        android:id="@+id/cancelCreate"
        android:text="@string/cancel_text_button"
        app:layout_constraintStart_toEndOf="@id/addNewCategoryButton"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>